the_project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: random-image
          emptyDir: { }
      containers:
        - name: todo-app
          image: dazakharova/todo-app:1.8
          volumeMounts:
            - name: random-image
              mountPath: /usr/src/app/cache
