the_project/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5001
